syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

package heat_pump;
option csharp_namespace = "HeatPumpProto";

service HeatPumpSvc {
  rpc GetActiveCircuitCount(google.protobuf.Empty) returns (google.protobuf.UInt32Value) {}
  rpc GetCircuit3BoostingSchedule(google.protobuf.Empty) returns (BoostingSchedule) {}
  rpc GetLowerTankBoostingSchedule(google.protobuf.Empty) returns (BoostingSchedule) {}
  rpc GetTemperatures(google.protobuf.Empty) returns (Temperatures) {}
  rpc GetTankLimits(google.protobuf.Empty) returns (TankLimits) {}
  rpc IsCompressorActive(google.protobuf.Empty) returns (google.protobuf.BoolValue) {}
  rpc IsSchedulingEnabled(google.protobuf.Empty) returns (google.protobuf.BoolValue) {}
  rpc SetActiveCircuitCount(google.protobuf.UInt32Value) returns (google.protobuf.Empty) {}
  rpc SetCircuit3BoostingSchedule(BoostingSchedule) returns (google.protobuf.Empty) {}
  rpc SetLowerTankBoostingSchedule(BoostingSchedule) returns (google.protobuf.Empty) {}
}

message WeekdayBoostingSchedule {
  uint32 start_hour = 1;        // [  0, 24]
  uint32 end_hour = 2;          // [  0, 24]
  int32 temperature_delta = 3;  // [-10, 10]
}

message BoostingSchedule {
  WeekdayBoostingSchedule monday = 1;
  WeekdayBoostingSchedule tuesday = 2;
  WeekdayBoostingSchedule wednesday = 3;
  WeekdayBoostingSchedule thursday = 4;
  WeekdayBoostingSchedule friday = 5;
  WeekdayBoostingSchedule saturday = 6;
  WeekdayBoostingSchedule sunday = 7;
}

message Temperatures {
  float circuit1 = 1;
  float circuit2 = 2;
  float circuit3 = 3;
  float ground_input = 4;
  float ground_output = 5;
  float hot_gas = 6;
  float inside = 7;
  float lower_tank = 8;
  float outside = 9;
  float upper_tank = 10;
}

message TankLimits {
  int32 lower_tank_minimum = 1;
  int32 lower_tank_minimum_adjusted = 2;
  int32 lower_tank_maximum = 3;
  int32 lower_tank_maximum_adjusted = 4;
  int32 upper_tank_minimum = 5;
  int32 upper_tank_minimum_adjusted = 6;
  int32 upper_tank_maximum = 7;
  int32 upper_tank_maximum_adjusted = 8;
}
